alignment fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,7 @@ header {
 
 nav {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 }
 
 nav a, .join a {
@@ -44,6 +44,7 @@ nav a, .join a {
 header button {
   background-color: #000000;
   color: #FFFFFF;
+  margin-top: 6px;
   margin-left: 10px;
   padding: 5px 20px;
   border-radius: 15px;
